@@ -1,1 +1,1 @@
-DIST nagios-check_dns_change-0.1.tar.gz 8079 SHA256 b19947a4481e7f36c473b98106a0be796d2d1f6c4c21885c44f71bdc027d4018 SHA512 bd7b42bbdf169223b7d41935335f741ff00e211d23548731b09c6f9bc5ada835cd5cb1a4e82f6f638a953b9d8a9965a3057e93d7370fa4351eae017cd66a1e33 WHIRLPOOL 94a8197f187e723f20f5a3777ab5c7cc925c22eee636b31b75561ab75018f66f1334815704d27db49fba2188038a6b64780cf740d5fc97a87f58f6f8c7015b90
+DIST nagios-check_dns_change-0.1.tar.gz 8109 SHA256 b897ea2ed2f0858b6ae41a043438344133364d7fba1b8686a99809e5b1f6d5ca SHA512 20da16015d1d29e258c191e32623614c71ae0a7084bde9f433e6153ce46bb8ea226d2acf591bb5dd39112d021efd72809d62fa9e26636763023436bf98763d6b WHIRLPOOL 55bfd081f31cbded65e52f014d71459a7ef4049ee69d0d0dd2a25b0cacfa65bd6f36d1fa55f2bce16eca429d5db36b509647f723b1f939d4bdfa3ec17a6f4218
