@@ -2,9 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Feb 2015; Johann Schmitz <ercpe@gentoo.org>
+  nagios-check_dns_change-0.1.ebuild:
+  nagios-check_dns_change: Fixed broken ebuild
+
 *nagios-check_dns_change-0.1 (12 Feb 2015)
 
   12 Feb 2015; Johann Schmitz <schmitz@cominto.de>
   +nagios-check_dns_change-0.1.ebuild, +metadata.xml:
   New ebuild for nagios-check_dns_change
-
